<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vehicle_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_live_data_home_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="0.5"
            android:background="@color/success"
            android:textColor="@color/white"
            android:text="@string/menu_start_logging"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="startLiveDataFromHome"
            />

        <Button
            android:id="@+id/stop_live_data_home_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/menu_stop_logging"
            android:textColor="@color/white"
            android:background="@color/error"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="stopLiveDataFromHome"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/home_settings_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_weight="0.5"
            android:text="@string/action_settings"
            android:textColor="@color/white"
            android:background="@color/primary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="openSettingsFromHome"
            />

        <Button
            android:id="@+id/home_dtc_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/menu_get_dtc"
            android:textColor="@color/white"
            android:background="@color/primary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="getTroubleCodesFromHome"
            />
        <Button
            android:id="@+id/home_trip_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/menu_trips_list"
            android:textColor="@color/white"
            android:background="@color/primary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="openTripsList"
            />
    </LinearLayout>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:tag="SPEED"
            android:text="@string/text_zero"
            android:textSize="@dimen/abc_text_size_display_2_material" />

        <TextView
            android:id="@+id/compass_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/text_orientation_default"
            android:layout_marginRight="5dp"
            android:textSize="@dimen/abc_text_size_display_2_material" />
    </TableRow>



    <LinearLayout
        android:id="@+id/data_layout_main"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:elevation="2dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hello world"
            android:id="@+id/dlm_tv1"/>

    </LinearLayout>
    <ScrollView
        android:id="@+id/data_scroll"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:elevation="2dp"
        android:outlineProvider="bounds"
        >
        <TableLayout
            android:id="@+id/data_table"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*" />

    </ScrollView>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_consumption_label"
            android:textSize="@dimen/abc_text_size_small_material"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_runtime_label"
            android:textSize="@dimen/abc_text_size_small_material"
            android:textColor="@color/primary"
            android:textStyle="bold"  />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_rpm_label"
            android:textSize="@dimen/abc_text_size_small_material"
            android:textColor="@color/primary"
            android:textStyle="bold" />


    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="FUEL_CONSUMPTION"
            android:text="@string/text_consumption_default" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="ENGINE_RUNTIME"
            android:text="@string/text_runtime_default" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="ENGINE_RPM"
            android:text="0" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_gps"
            android:textSize="@dimen/abc_text_size_small_material"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_bluetooth"
            android:textSize="@dimen/abc_text_size_small_material"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_obd"
            android:textSize="@dimen/abc_text_size_small_material"
            android:textColor="@color/primary"
            android:textStyle="bold" />


    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/GPS_POS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="" />

        <TextView
            android:id="@+id/BT_STATUS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="" />

        <TextView
            android:id="@+id/OBD_STATUS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="" />
    </TableRow>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/view_detailed_logging"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="0.01"
            android:onClick="viewLoggingDetails"
            android:textColor="@color/white"
            android:background="@color/primary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
</LinearLayout>
